# arroyo-soc-udf

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
tests/: integration.rs
